# powerline_inspection_simulation

./: README.md  package.xml  setup.cfg  setup.py
config/: ros_gz_bridge.yaml
launch/: drone_bridge.launch.py
models/CTU_CRAS_NORLAB_X500_SENSOR_CONFIG_1/: metadata.pbtxt  model.sdf  model_rviz.sdf
models/grass_plane/: model.sdf
models/high_voltage_power_line/: model.config  model.sdf
models/high_voltage_power_line/meshes/: power_line.mtl
models/three_power_towers/: model.config  model.sdf
powerline_inspection/: odometry_bridge_node.py  roi_node.py  waypoint_cmd_node.py  yolo_api_node.py  yolo_trainning.py
transmission_tower_dataset/: README.dataset.txt  README.roboflow.txt  data.yaml
transmission_tower_dataset/test/labels/: AdobeStock_366742915_Preview_jpeg.rf.c387c53109a96914febafc74907591f7.txt  AdobeStock_433706081_Preview_jpeg.rf.1c8af9671b53d441a4f00d9f3d60095c.txt  AdobeStock_664306784_Preview_jpeg.rf.1374bc659a39e2c73e57b9da6b6d8425.txt  image0e9733e0-3b26-4ee2-9aa6-b92a1f030b02_jpg.rf.5cb4e281ce29eaa1202694708c8bd601.txt  image132b45bb-db45-47ce-ae7b-fc93d5bf49d4_jpg.rf.35bfb547ddeb4d7184c4905c852ec94f.txt  image21da3ce3-85af-4bd7-ab19-e8606ef4c518_jpg.rf.932d855bed2c10cf02f8f879a6072089.txt  image22be62ec-051d-47eb-bf00-a435b3766195_jpg.rf.93cf49ec53181e1f406558f93b6df12d.txt  image29d75ea5-1ca6-4272-80a7-e104c8138c48_jpg.rf.94d74ab3fd7a614227273395c47a9db1.txt  (+42 more)
transmission_tower_dataset/train/: labels.cache
transmission_tower_dataset/valid/: labels.cache
worlds/: inspection_valley.world
(+475 files in other folders)
